# shamir-otp

./: AndroidApplication.md  LibraryDocumentation.md  ProjectHome.md  UsingPAMModule.md  config.h  config.status  configure
Android/res/layout/: display_layout.xml
Android/res/values/: strings.xml
Android/src/edu/chris/miceli/: DisplayOTP.java
autom4te.cache/: output.1  output.2  traces.0  traces.2
docs/: Makefile.in
libshamir_OTP/: Makefile.in  shamir_OTP.c  shamir_OTP.h
libshamir_OTP/.deps/: libshamir_OTP_la-otp.Plo  libshamir_OTP_la-utils.Plo  shamir_OTP.Plo
m4/: try_doxygen.m4
pam-module/: Makefile.in  shamir_otp.c
pam-module/.deps/: libshamir_otp_la-shamir_otp.Plo
src/: check_otp.c  create_profile.c  generate_otp.c  load_profile.c  print_profile.c  shamir-check-otp  shamir-create-profile
src/.deps/: shamir_print_profile-print_profile.Po
trunk/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure.ac  libtool
trunk/Android/: .project  AndroidManifest.xml
trunk/Android/res/layout/: configuration_layout.xml  profile_layout.xml
trunk/Android/res/menu/: profile_menu.xml
trunk/Android/src/edu/chris/miceli/: Configuration.java  Profile.java  ShamirOTP.java  UpdateMaterial.java  VerificationMaterial.java
trunk/autom4te.cache/: output.0  requests  traces.1  traces.3
trunk/docs/: Doxyfile.in  Makefile.am
trunk/libshamir_OTP/: Makefile.am  shamir_OTP.c  shamir_OTP.h
trunk/libshamir_OTP/.deps/: libshamir_OTP_la-profile.Plo
trunk/pam-module/: Makefile.am  shamir_otp.c
trunk/src/: Makefile.am  Makefile.in  check_otp.c  create_profile.c  generate_otp.c  print_profile.c  shamir-generate-otp  shamir-load-profile  shamir-print-profile
trunk/src/.deps/: shamir_check_otp-check_otp.Po  shamir_create_profile-create_profile.Po  shamir_generate_otp-generate_otp.Po  shamir_load_profile-load_profile.Po
wiki/: AndroidApplication.wiki  LibraryDocumentation.wiki  UsingPAMModule.wiki
