bin_PROGRAMS = shamir-create-profile shamir-load-profile shamir-check-otp shamir-generate-otp shamir-print-profile

shamir_create_profile_SOURCES = create_profile.c
shamir_create_profile_CPPFLAGS = -I$(top_srcdir)/libshamir_OTP
shamir_create_profile_LDADD = $(top_srcdir)/libshamir_OTP/libshamir_OTP.la

shamir_load_profile_SOURCES = load_profile.c
shamir_load_profile_CPPFLAGS = -I$(top_srcdir)/libshamir_OTP
shamir_load_profile_LDADD = $(top_srcdir)/libshamir_OTP/libshamir_OTP.la

shamir_check_otp_SOURCES = check_otp.c
shamir_check_otp_CPPFLAGS = -I$(top_srcdir)/libshamir_OTP
shamir_check_otp_LDADD = $(top_srcdir)/libshamir_OTP/libshamir_OTP.la

shamir_generate_otp_SOURCES = generate_otp.c
shamir_generate_otp_CPPFLAGS = -I$(top_srcdir)/libshamir_OTP
shamir_generate_otp_LDADD = $(top_srcdir)/libshamir_OTP/libshamir_OTP.la

shamir_print_profile_SOURCES = print_profile.c
shamir_print_profile_CPPFLAGS = -I$(top_srcdir)/libshamir_OTP
shamir_print_profile_LDADD = $(top_srcdir)/libshamir_OTP/libshamir_OTP.la
